picturestyle.css
/* FULL PAGE*/


    html, body {
        font-family: "Roboto", sans-serif;
        
        width: 100%;
        margin: 0;
        padding: 0;
        height: 100vh;
        display: flex;
        flex-direction: column;
        align-items: center;
        /*background-color: grey;*/
    }




/* HEADER NAVBAR*/

    header {
        position: absolute;
        max-width: 100%;
        padding-top: 1.0vw;
        padding-bottom: 2.0vw;
        text-transform: uppercase;
        color: white;
        z-index: 1;
    }

    .relative-header { /* Adjustments for header to make z-index not 1 */
        display: flex;
        flex-direction: column;
        position: relative;
        max-width: 100%;
        padding-top: 1.0vw;
        padding-bottom: 2.0vw;
        text-transform: uppercase;
        color: white;
        background-color: lightslategray;
        z-index: 0;
        width: 100%;
        box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
    }


    .header-title h1 {
        margin: auto;
        font-weight: 100;
        font-style: italic;
        font-size: 4.5em;
        text-align: center;
    }

    nav {
        margin-top: 0.2vw;
        margin-bottom: 0;
    }

    .nav-menu-items {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
        line-height: 1.6em;
        font-size: .8em;
        letter-spacing: 0.1em;     
    }

    @media screen and (viewport-width:950px) {
        .nav-menu-items {
            line-height: 1.8em;
            font-size: 1.0em;
        }
    }
    @media screen and (max-width:950px) {
        .nav-menu-items {
            line-height: 1.8em;
            font-size: 1.0em;
        }
    }


    .nav-menu-items a{
        text-decoration: none;
        color: white;
        text-decoration: underline solid rgba(255, 255, 255, 0) 0.1em;
        text-underline-offset: 0.15em;
        transition: 0.3s;
    }

    .nav-menu-items li {
        list-style-type: none;
    }

    .nav-menu-items li a{
        padding: 5px;
        margin: 2px;
        font-weight: 500;
    }


    #current_page {
        color: rgb(238, 238, 238);
        text-decoration: underline solid rgb(238, 238, 238) 0.1em;
        text-underline-offset: 0.4em;
    }


    a:hover {
        color: rgb(238, 238, 238, 1);
        text-decoration: underline solid rgb(238, 238, 238, 1) 0.1em;
        text-underline-offset: 0.4em;
    }

    #current_page:hover{
        color: rgb(238, 238, 238);
    }



/* INDEX PAGE CSS */

    /* Full height splashcreen */

        .bg {
            display: flex;
            flex-direction: column;
            
            /*https://larsenwork.com/easing-gradients/*/
            background:        
                linear-gradient(to bottom,
                hsla(0, 0%, 0%, 0.45) 0%,
                hsla(0, 0%, 0%, 0.388) 5.3%,
                hsla(0, 0%, 0%, 0.331) 10.9%,
                hsla(0, 0%, 0%, 0.279) 16.6%,
                hsla(0, 0%, 0%, 0.232) 22.6%,
                hsla(0, 0%, 0%, 0.189) 28.8%,
                hsla(0, 0%, 0%, 0.152) 35.2%,
                hsla(0, 0%, 0%, 0.118) 41.8%,
                hsla(0, 0%, 0%, 0.09) 48.5%,
                hsla(0, 0%, 0%, 0.065) 55.4%,
                hsla(0, 0%, 0%, 0.045) 62.5%,
                hsla(0, 0%, 0%, 0.028) 69.7%,
                hsla(0, 0%, 0%, 0.016) 77.1%,
                hsla(0, 0%, 0%, 0.007) 84.6%,
                hsla(0, 0%, 0%, 0.002) 92.3%,
                hsla(0, 0%, 0%, 0) 100%), url(IMG/ifranjpg-compressed.jpg);
                
            /*background: linear-gradient(0deg, rgb(255, 255, 255, 0.0) 10%, rgba(0, 0, 0, 0.15) 100%), url(IMG/backgroundsplash.jpg);*/

            background-position: center;
            background-repeat: no-repeat;
            background-size: cover;
            
            min-height: 100%;
            width: 100%;
            
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            z-index: 0;
            overflow: hidden;

            justify-content: center;
            align-items: center;

            
        }

            .welcomemessage {
                width: 70%;
                text-align: center;
                color: white;
                font-weight: 100;
                font-style: italic;
                font-size: 3.0em;
            }

            .button {
                height: 40px;
                width: 120px;
                border: none;
                text-align: center;
                text-decoration: none;
                background-color: white;
                transition-duration: 0.5s;

                font-size: 0.85em;
                font-family: "Roboto", sans-serif;
                letter-spacing: 0.08em;
                
            }

            .button:hover {
                background-color: rgba(255, 255, 255, 0.7);
                color: rgba(53, 53, 53, 0.6);
        }

    /* About Section */

        .section1 {     
            width: 100%;
            background-color: rgb(255, 255, 255);
            
        }

            .section1_content {
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;
                height: 100%;
                width: 90%;
                margin: auto;
                
            }

            .section1_header {
                width: 90%;
                font-weight: 100;
                font-style: italic;
                font-size: 1.2em;
                text-align: left;
                margin-top: 20px;
            }


            .section1_row {
                display: flex;
                flex-direction: row;
                align-items: center;
                height: 100%;
            }


            .picture {
                float: left;
                padding: 20px;
                padding-top: 0px;
                padding-bottom: 40px;
            }

            .section1_content p {
                padding: 0px 20px;
                
            }

            @media screen and (viewport-width:750px) {
                .section1_row {
                    flex-direction: column;
                }
            }
            @media screen and (max-width:750px) {
                .section1_row {
                    flex-direction: column;
                }
            }

    /* Featured Articles Section */

        .section2 {
            width: 100%;
            background-color: rgb(110, 171, 187);
        }

            .section2_content {
                display: flex;
                flex-direction: column;
                color: white;
                width: 90%;
                height: 100%;
                margin: auto;
            }

            .section2_header {
                font-weight: 100;
                font-style: italic;
                font-size: 1.2em;
                text-align: left;
                margin-left: 50px;
                margin-top: 20px;
            }

            .section2_links {
                display: flex;
                flex-direction: row;
                flex-wrap: wrap;
                justify-content: center;
                align-items: center;
                height: 100%;
                width: 100%;
                margin: auto;
                margin-bottom: 25px;
                margin-top: 0px;
            }

            .section2_link {
                width: 20vw;
                height: 20vw;
                margin: 0.9vw;
                background-color: white;
                color: black;
                text-align: center;
            }

            @media screen and (viewport-width:750px) {
                .section2_link {
                    width: 35vw;
                    height: 35vw;
                    margin: 1.5vw;
                    margin-bottom: 3vw;
                }
            }

            @media screen and (max-width:750px) {
                .section2_link {
                    width: 35vw;
                    height: 35vw;
                    margin: 1.5vw;
                    margin-bottom: 3vw;
                }
            }

       
    /* Footer */

        .section3 {
            
            min-height: 50px;
            width: 100%;
            background-color: rgb(255, 255, 255);
            display: flex;
        }

            .section3_content {
                width: 80%;
                height: 100%;
                margin: auto;
                display: flex;
                justify-content: center;
                align-items: center;
            }

            .footer_text p{
                text-align: center;
                font-size: 0.8em;
                margin: 4px 0;
            }


/* CONTACT PAGE CSS */

    .contact-container {
        display: flex;
        flex-direction: column;
        width: 100%;
        height: 100%;
        align-items: center;
        justify-content: center;
        margin-top: 0;
    }
 
    .contact-form {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        min-height: 70%;
        width: 50%;
        margin: auto;
        background-color: lightslategray;
        border-radius: 5px;

        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
}

    @media screen and (viewport-width:900px) {
        .contact-form {
            width: 80%;
        }
    }

    @media screen and (max-width:900px) {
        .contact-form {
            width: 80%;
        }
    }



    .contact-form h1 {
        font-weight: 100;
        font-style: italic;
        font-size: 3.5em;
        color:white;
        margin-bottom: 10%;
    }

    .contact-form label {
        margin: 5px;
        padding: 5px;
        color:white;
        width: 90%;

        
    }


    input {
        width: 90%;
        padding: 5px;
        margin: 15px;
        border-radius: 3px;
        border: none;
        background-color: transparent;
        color: white;
        font-family: "Roboto", sans-serif;
        font-size: 0.9rem;
        outline: none;
        border-bottom: 2px solid rgba(255, 255, 255, 0.1);
        transition: border-bottom 0.6s;
    }

    input:focus {
        border-bottom: 2px solid rgba(255, 255, 255, 0.8);
    }



    .contact-form textarea {
        width: 90%;
        padding: 10px;
        margin: 5px;
        border: none;
        font-family: "Roboto", sans-serif;
        font-size: 0.9em;
        outline: none;
        background-color: transparent;
        color: white;
        border-bottom: 2px solid rgba(255, 255, 255, 0.1);
        transition: border-bottom 0.8s;
        resize: none;
    }

    .contact-form textarea:focus {

        border-bottom: 2px solid rgba(255, 255, 255, 0.8);
    }
   
    #message {
        margin-bottom: 35px;
        height: 150px;
        
    }

